# BoundingBoxMe

./: CMakeLists.txt  MainWindow.cxx  MainWindow.h  MainWindow.ui  README.md  boundingBox.cxx  boundingBox.h  boundingBoxInformation_ui.cxx  boundingBoxInformation_ui.h  boundingBoxInformation_ui.ui  boundingBoxManager.cxx  boundingBoxManager.cxx.autosave  boundingBoxManager.h  cameraFrame.cxx  cameraFrame.h  cameraFramesManager.cxx  cameraFramesManager.h  classes.yaml  classesManager.cxx  classesManager.h  datasetHelper.cxx  datasetHelper.h  displayManager_ui.cxx  displayManager_ui.h  displayManager_ui.ui  keyPressInteractorStyle.cxx  keyPressInteractorStyle.h  lidarFrame.cxx  lidarFrame.h  lidarFrameManager.cxx  lidarFrameManager.h  logger.cxx  logger.h  main.cxx  sideViewsInteractorStyle.cxx  sideViewsInteractorStyle.h  timeStepsManager.cxx  timeStepsManager.h  timeStepsManager_ui.cxx  timeStepsManager_ui.h  (+7 more)
annotation_example/: bb.series  bb_000000.yaml  bb_000002.yaml  bb_000003.yaml  bb_000005.yaml
assets/: resources.qrc
cmake/: git.cmake
example_data/annotation_data/: bb.series  bb_000001.yaml  bb_000003.yaml  bb_000004.yaml
example_data/camera_data/: image.jpg.series
example_data/lidar_data/: frame_0000.vtp  frame_0001.vtp  frame_0002.vtp
lidar_data_example/: frame.vtp.poses  frame.vtp.series  frame_0003.vtp  frame_0004.vtp  frame_0005.vtp
src/: MainWindow.cxx  MainWindow.h  MainWindow.ui  boundingBox.cxx  boundingBox.h  boundingBoxInformation_ui.h  boundingBoxInformation_ui.ui  boundingBoxManager.cxx  boundingBoxManager.h  cameraFrame.h  cameraFramesManager.cxx  cameraFramesManager.h  classesManager.h  datasetHelper.cxx  datasetHelper.h  displayManager_ui.cxx  displayManager_ui.h  keyPressInteractorStyle.cxx  keyPressInteractorStyle.h  lidarFrame.cxx  lidarFrame.h  lidarFrameManager.cxx  lidarFrameManager.h  main.cxx  mainViewInteractorStyle.cxx  mainViewInteractorStyle.h  sideViewsInteractorStyle.cxx  sideViewsInteractorStyle.h  switchViewportCallback.cxx  switchViewportCallback.h  timeStepsManager.h  timeStepsManager_ui.h  timeStepsManager_ui.ui  vtkBoundingBoxManipulatorWidget.cxx  vtkBoundingBoxManipulatorWidget.h  vtkBoundingBoxSource.cxx  vtkEigenUtils.cxx  vtkEigenUtils.h
